<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    tools:context=".AddClasses">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            style="@style/TextInput"
            android:id="@+id/class_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/class_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInput"
            android:id="@+id/class_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/class_year" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInput"
            android:id="@+id/subject_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject_name" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/save_class"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/done"
                android:onClick="onClickDone"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                style="@style/ButtonTheme2"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/cancel"
                android:layout_toStartOf="@id/save_class"
                android:layout_toLeftOf="@id/save_class"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                style="@style/ButtonTheme1"
                android:onClick="onClickCancel"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>