<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp"
    android:paddingHorizontal="16dp"
    android:orientation="vertical"
    tools:context=".attendance">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/attendance"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorText"
        android:textSize="30sp" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:onClick="onClickAddClass"
        android:text="@string/add_class"
        android:drawableLeft="@drawable/add"
        style="@style/ButtonTheme1"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:onClick="onClickShowClasses"
        android:text="@string/view_classes"
        style="@style/ButtonTheme2"/>

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today_class"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorText"
        android:textSize="20sp"/>

    <ListView
        android:id="@+id/class_list"
        android:layout_gravity="center_horizontal"
        android:dividerHeight="0dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content" /> -->

</LinearLayout>